# etiqueta

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  backup.py  categories.py  items.py  locations.py  meta.py  photos.py  printing.py  search.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  app_setting.py  associations.py  base.py  category.py  item.py  location.py  photo.py
backend/app/repositories/: base.py  category.py  item.py  location.py  photo.py
backend/app/schemas/: auth.py  backup.py  category.py  item.py  location.py  photo.py  printing.py  search.py
backend/app/services/: auth.py  backup.py  category.py  code.py  errors.py  item.py  label_image.py  location.py  photo.py  search.py  slp650.py  storage.py  text.py  tree.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_printing.py
docs/: DESIGN_SYSTEM.md  PALETTE.md  PRD.md  README.md  style-tile.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CategoryChip.tsx  Icons.tsx  ItemCard.tsx  ItemFormModal.tsx  Layout.tsx  LocationFormModal.tsx  Modal.tsx  PathTrail.tsx  PhotoManager.tsx  PinGate.tsx  QrCode.tsx  Tag.tsx
frontend/src/pages/: BackupPage.tsx  CategoriesPage.tsx  (+7 more)
(+4 files in other folders)
